app1/app1-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: app1-ns
spec:
  # HorizontalPodAutoscaler[HPA] manages the replicas field of the Deployment
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: d4cregistry/flask-app1:latest
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
