app1/default-backend-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: app1-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default
        image: d4cregistry/default-flask-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
