app1/app1-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: app1-ns
spec:
  #type: LoadBalancer
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 30080
