app1/default-backend-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-backend-service
  namespace: app1-ns
spec:
  #type: LoadBalancer
  selector:
    app: default
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 30080
